--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Othniel Agera",
+  "name": "Othniel Agera",
   "icons": [
+    {
+      "src": "favicon-16x16.png",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/png"
+    },
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "logo192.png",
